objects/ObjectHistory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <inlineHelpText>Account Status at time of Deactivation Date Change</inlineHelpText>
        <label>Account Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Object History</relationshipLabel>
        <relationshipName>Object_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Object History</relationshipLabel>
        <relationshipName>Object_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_in_Escalated_Status__c</fullName>
        <formula>IF( Field_Status__c = "Escalated",  EndDateTime__c  -  StartDateTime__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Escalated Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedDays__c</fullName>
        <formula>IF(ISBLANK(EndDateTime__c), NOW()-StartDateTime__c+1, EndDateTime__c-StartDateTime__c+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Status__c</fullName>
        <label>Field Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppAnnualContractValue__c</fullName>
        <label>Opp Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppTotalContractValue__c</fullName>
        <label>Opp Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>HistoryTracker_Opp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordCreatedDate__c</fullName>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecordOwner__c</fullName>
        <label>Record Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>IF(NOT(ISBLANK(Opportunity__c)), Opportunity__r.RecordType.Name, "")</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TORCHx_Elapsed_Days__c</fullName>
        <formula>IF(NOT(ISBLANK(EndDateTime__c)), 
(DATETIMEVALUE(EndDateTime__c ) - DATETIMEVALUE( StartDateTime__c )) - 
( FLOOR ( ( ( (DATETimeVALUE(EndDateTime__c )) - DATETIMEVALUE(StartDateTime__c )) / 7 ) ) * 2 ) + 
CASE(MOD ( DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD(DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7) - MOD((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) ) 
, 
(NOW()- DATETIMEVALUE( StartDateTime__c )) - 
( FLOOR ( ( ( NOW() - DATETIMEVALUE(StartDateTime__c)) / 7 ) ) * 2 ) + 
CASE(MOD ( DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7), 
0,CASE( MOD (TODAY() - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD (TODAY() - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD(DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7) - MOD(TODAY() - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD(TODAY() - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) ) 
)</formula>
        <label>TORCHx Elapsed Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TORCHx_Elapsed_Hours__c</fullName>
        <formula>(IF(NOT(ISBLANK(EndDateTime__c)), 
(DATETIMEVALUE(EndDateTime__c ) - DATETIMEVALUE( StartDateTime__c )) - 
( FLOOR ( ( ( (DATETimeVALUE(EndDateTime__c )) - DATETIMEVALUE(StartDateTime__c )) / 7 ) ) * 2 ) + 
CASE(MOD ( DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD(DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7) - MOD((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((DATEVALUE(EndDateTime__c)) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) ) 
, 
(NOW()- DATETIMEVALUE( StartDateTime__c )) - 
( FLOOR ( ( ( NOW() - DATETIMEVALUE(StartDateTime__c)) / 7 ) ) * 2 ) + 
CASE(MOD ( DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7), 
0,CASE( MOD (TODAY() - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD (TODAY() - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD(DATEVALUE(StartDateTime__c) - DATE( 1900,1,6 ),7) - MOD(TODAY() - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD(TODAY() - DATE( 1900,1,6 ),7) = 0,1,-2 ) ) ) 
))*24


/*https://help.salesforce.com/articleView?id=000001100&amp;type=1*/</formula>
        <label>TORCHx Elapsed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Value__c</fullName>
        <description>This field is used to house time values populated by other objects</description>
        <label>Time Value</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>UpdatedByText__c</fullName>
        <label>Updated By (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Update By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Object_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Detail__c</fullName>
        <label>Opp Stage Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Total_Forecasted_Adoption_Value__c</fullName>
        <label>Opp Total Forecasted Adoption Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Total_Monthly_Spend__c</fullName>
        <label>Opp Total Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Total_One_Time_Fees__c</fullName>
        <label>Opp Total One-Time Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Weighted_Pipeline_Value__c</fullName>
        <label>Opp Weighted Pipeline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Object History</label>
    <nameField>
        <displayFormat>OH-{0000000}</displayFormat>
        <label>Object History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>